# halado_alk_prog

./: CMakeLists.txt
beadando/: CMakeLists.txt  README.md  main.cpp  scatter.hh
beadando_gpu/: CMakeLists.txt  README.md  main.cpp  opencl_buffer.hpp  opencl_device.hpp  pipe.cl  scatter.hh
ora_2/: CMakeLists.txt  main.cpp
ora_3/: CMakeLists.txt  main.cpp
ora_4/: CMakeLists.txt  fit.data  main.cpp
ora_5/: CMakeLists.txt  README.md  main.cpp  vector2.h
ora_6/: CMakeLists.txt  README.md  main.cpp  matrix.hh
ora_8/: CMakeLists.txt  main.cpp  matrix.hh  result.txt
szalazas/: CMakeLists.txt  README.md  main.cpp  matrix.hh  result_1.txt  result_2.txt  result_4.txt  result_many.txt  result_simple.txt
szalazas_2/: CMakeLists.txt  README.md  main_parallel_game_of_life.cpp  main_parallel_line_fitting.cpp
